fix overflowing select box values

--- a/source/stylesheets/_forms.scss
+++ b/source/stylesheets/_forms.scss
@@ -60,6 +60,7 @@ select {
   background-repeat: no-repeat;
   background-size: 1rem;
   background-position: right 10px center;
+  overflow: hidden;
 }
 
 select:hover,
